# goit-pythonweb-hw-12

./: .dockerignore  .env_example  .gitignore  Docker-compose.yaml  DockerFile  Dockerfile  README.md  main.py  pyproject.toml  start.sh  test.db
alembic/: env.py
alembic/versions/: 0cea830cb8b5_rename_field.py  31f96756bad4_email_and_phone_unique_with_user_id.py  37dff4ac51d4_add_relationship.py  3ff197b23e5e_add_create_at_to_user.py  832ace3f7a67_username_unique.py  935ff7bedaac_add_email_confirmed_to_user.py  d30ef4ef1f32_init.py  d518a89babb6_add_roles_for_user.py  da9d49f2309b_add_avatar_field_to_user_model.py
docs/: conf.py  index.rst
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: settings.py
src/database/: db.py
src/database/models/: __init__.py  base.py  contacts.py  users.py
src/events/: user_cache.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  roles.py  upload_file.py  users.py
src/services/templates/: reset_password_email.html  verify_email.html
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_user.py  test_integration_utils.py
